PBI #40266: My Time, Request Page is not responsive to mobile phone Issue #40899: The calendar displaying completed off after clicked on the calendar icon on Requests page

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -643,4 +643,13 @@ input[type=search]::-ms-clear {
     .full-day-label {
 	    max-width: 100px;
     }
+    .request-date {
+        max-width: 270px;
+        left: 10px;
+    }
+    .request-new-datefrom.request-new-datefrom,
+    .request-new-dateto.request-new-dateto {
+        width: 107%;
+	    left: -10px;
+    }
 }
